--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
                 <div class="d-flex position-absolute w-100 h-100">
                     <div class="position-relative overflow-hidden vw-100">
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
-                            <img src="./assets/images/bg2.webp" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
+                            <!-- <img src="./assets/images/bg2.webp" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;"> -->
+                            <img src="https://picsum.photos/id/114/1000/1000" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
+                            <!-- <div class="bg-light-dark"></div> -->
                         </div>
                         <!-- <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
                             <img src="./assets/images/bg3.webp" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
@@ -347,7 +349,7 @@
                 </section>
 
                 <!-- Gallery -->
-                <!-- <section class="bg-white-black pb-5 pt-3" id="gallery">
+                <section class="bg-white-black pb-5 pt-3" id="gallery">
                     <div class="container">
                         <div class="border rounded-5 shadow p-3">
 
@@ -355,6 +357,24 @@
 
                             <div class="container mt-3">
                                 <div class="row">
+                                    <div class="mb-1">
+                                        <img src="./assets/images/bg2.webp" class="img-fluid rounded">
+                                    </div>
+                                    <div class="mb-1">
+                                        <img src="./assets/images/bg4.webp" class="img-fluid rounded">
+                                    </div>
+                                    <div class="mb-1">
+                                        <img src="./assets/images/bg5.webp" class="img-fluid rounded">
+                                    </div>
+                                    <div class="mb-1">
+                                        <img src="./assets/images/bg6.webp" class="img-fluid rounded">
+                                    </div>
+                                    <div class="mb-1">
+                                        <img src="./assets/images/bg15.webp" class="img-fluid rounded">
+                                    </div>
+                                </div>
+
+                                <!-- <div class="row">
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg5.webp" class="img-fluid rounded" alt="Image 1">
                                     </div>
@@ -364,9 +384,9 @@
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg7.webp" class="img-fluid rounded" alt="Image 3">
                                     </div>
-                                </div>
+                                </div> -->
 
-                                <div class="row">
+                                <!-- <div class="row">
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg8.webp" class="img-fluid rounded" alt="Image 1">
                                     </div>
@@ -376,9 +396,9 @@
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg10.webp" class="img-fluid rounded" alt="Image 3">
                                     </div>
-                                </div>
+                                </div> -->
 
-                                <div class="row">
+                                <!-- <div class="row">
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg11.webp" class="img-fluid rounded" alt="Image 1">
                                     </div>
@@ -388,9 +408,9 @@
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg13.webp" class="img-fluid rounded" alt="Image 3">
                                     </div>
-                                </div>
+                                </div> -->
 
-                                <div class="row">
+                                <!-- <div class="row">
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg14.webp" class="img-fluid rounded" alt="Image 1">
                                     </div>
@@ -400,11 +420,11 @@
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg.webp" class="img-fluid rounded" alt="Image 3">
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
-                </section> -->
+                </section>
 
                 <!-- Wave Separator -->
                 <div class="svg-wrapper">
@@ -467,7 +487,7 @@
             <div class="d-flex flex-column text-center">
                 <h2 class="font-esthetic mb-4" style="font-size: 2.25rem;">The Wedding Of</h2>
 
-                <img src="./assets/images/bg.webp" fetchpriority="high" decoding="async" alt="background" class="img-center-crop rounded-circle border border-3 border-light shadow mb-4 mx-auto">
+                <img src="./assets/images/bg2.webp" fetchpriority="high" decoding="async" alt="background" class="img-center-crop rounded-circle border border-3 border-light shadow mb-4 mx-auto">
 
                 <h2 class="font-esthetic mb-4" style="font-size: 2.25rem;">Della &amp; Arsyad</h2>
                 <div id="guest-name" data-message="Kepada Yth Bapak/Ibu/Saudara/i"></div>
